--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrepreneur Boost - Lancez votre succès</title>
+    <title>OZE - Faisons briller votre business</title>
     <link rel="stylesheet" href="./stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -48,26 +48,25 @@
 <!--
 <div class="bg-special-effect"></div>
 -->
-      <nav class="navbar" id="navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <span class="logo-text">Camille</span>
-                <span class="logo-accent">Aoulou</span>
-            </div>
-            <div class="nav-menu" id="nav-menu">
-                <a href="#accueil" class="nav-link active">Accueil</a>
-                <a href="#packs" class="nav-link">Nos Packs</a>
-                <a href="#temoignages" class="nav-link">Témoignages</a>
-                <a href="#apropos" class="nav-link">À propos</a>
-                <a href="#ctaSection" class="nav-link">Contact</a>
-            </div>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+<nav class="navbar" id="navbar">
+    <div class="nav-container">
+        <div class="logo">
+            <img src="./images/logo.png" alt="Logo Camille Aoulou" class="logo-img">
         </div>
-    </nav>
+        <div class="nav-menu" id="nav-menu">
+            <a href="#accueil" class="nav-link active">Accueil</a>
+            <a href="#packs" class="nav-link">Nos Packs</a>
+            <a href="#temoignages" class="nav-link">Témoignages</a>
+            <a href="#apropos" class="nav-link">À propos</a>
+            <a href="#ctaSection" class="nav-link">Contact</a>
+        </div>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+</nav>
 
 <main>
 <section class="hero" id="accueil">
@@ -135,7 +134,7 @@
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Création d'une page pro sur 1 ou 2 réseaux sociaux</span>
+                        <span>Lancement de vos réseaux sociaux</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
@@ -220,15 +219,15 @@
                         </div>
                         <div class="feature-item">
                             <i class="feature-bullet"></i>
-                            <span>Création supports communication</span>
+                            <span>Création de vos supports de communication</span>
                         </div>
                         <div class="feature-item">
                             <i class="feature-bullet"></i>
-                            <span>Gestion des inscriptions/RSVP</span>
+                            <span>Suivi et gestion des participants</span>
                         </div>
                         <div class="feature-item">
                             <i class="feature-bullet"></i>
-                            <span>Plan communication avant & après</span>
+                            <span>Plan de communication avant & après</span>
                         </div>
                     </div>
 
@@ -640,7 +639,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="https://via.placeholder.com/200x70/FFFFFF/2D5A87?text=ENTREPRENEUR+BOOST" alt="Entrepreneur Boost">
+                      <img src="./images/logo.png" alt="Logo Camille Aoulou" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
@@ -693,7 +692,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Entrepreneur Boost. Tous droits réservés.</p>
+                <p>&copy; 2025 OZE. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
