--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo.png" alt="Logo Camille Aoulou" class="logo-img">
+                      <img src="./images/logo2.png" alt="Logo Camille Aoulou" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
