ajout pack sur mesure modif gap items modif gap packs expertise form responsive

--- a/index.html
+++ b/index.html
@@ -256,8 +256,13 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
+        <div class="packs-custom-section">
+            <h3>Envie d'une formule plus personnalisée ?</h3>
+            <p>Nous proposons aussi des prestations à la carte, pour créer ensemble la solution qui correspond vraiment à vos besoins.</p>
+            <a href="#ctaSection" class="packs-custom-cta">Discuter de mon projet</a>
+        </div>
+      </div>
+    </section>
 
 <!-- Testimonials Section -->
 <section class="testimonials section" id="temoignages">
@@ -422,7 +427,7 @@
         <div class="cta-bg"></div>
         <div class="bg-special-effect"></div>
         <div class="container">
-            <h2>Prêt à booster votre visibilité dès aujourd'hui ?</h2>
+            <h2>Prêt à booster votre visibilité dès aujourd'hui?</h2>
             <p>Contactez-nous pour discuter de votre projet</p>
             <button class="btn btn-white" id="demanderDevisBtn">On discute ?</button>
         </div>
@@ -523,7 +528,7 @@
     </div>
     <div class="container">
         <div class="section-header text-center">
-            <h2 class="section-title">Questions Fréquemment Posées</h2>
+            <h2 class="section-title">Questions fréquemment posées</h2>
             <p class="section-subtitle">Trouvez rapidement les réponses à vos questions</p>
         </div>
 
@@ -639,7 +644,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo2.png" alt="Logo Camille Aoulou" class="logo-img">
+                      <img src="./images/logo3.png" alt="Logo Camille Aoulou" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
