--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <nav class="navbar" id="navbar">
     <div class="nav-container">
         <div class="logo">
-            <img src="./images/logo.png" alt="Logo Camille Aoulou" class="logo-img">
+            <img src="./images/logo4.png" alt="Logo Camille Aoulou" class="logo-img">
         </div>
         <div class="nav-menu" id="nav-menu">
             <a href="#accueil" class="nav-link active">Accueil</a>
