--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
     <!-- Overlay de gradient -->
     <div class="bg-overlay"></div>
 </div>
-
-<!-- Pour les effets spéciaux sur certaines sections, ajoutez ceci dans les sections hero et cta-section -->
-<!-- À placer à l'intérieur des sections .hero et .cta-section -->
-<!--
-<div class="bg-special-effect"></div>
--->
 <nav class="navbar" id="navbar">
     <div class="nav-container">
         <div class="logo">
@@ -94,7 +88,7 @@
             </span>
             <span class="title-line accent">votre business</span>
         </h1>
-        <p class="hero-subtitle">Nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l'essentiel : votre activité !</p>
+        <p class="hero-subtitle">Chez Ozé communication, nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l’essentiel : votre activité.</p>
         <div class="hero-buttons">
             <a href="#packs" class="btn btn-primary">Découvrir nos packs</a>
             <a href="#apropos" class="btn btn-secondary">Pourquoi nous choisir?</a>
@@ -130,7 +124,7 @@
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Mise en place d'un site vitrine</span>
+                        <span>Création de site web (site vitrine)</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
@@ -176,7 +170,7 @@
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Création et gestion des campagnes ads</span>
+                        <span>Création et gestion des campagnes ads publicitaires</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
@@ -350,77 +344,80 @@
     </div>
 </section>
 
-        <!-- Why Choose Us Section -->
-        <section class="why-choose section" id="apropos">
-            <div class="container">
-                <div class="section-header text-center">
-                    <h2 class="section-title">Pourquoi nous choisir ?</h2>
-                    <p class="section-subtitle">L'expertise et l'accompagnement qui font la différence</p>
+<!-- Why Choose Us Section -->
+<section class="why-choose section" id="apropos">
+    <div class="container">
+        <div class="section-header text-center">
+          <h2 class="section-title">Pourquoi nous choisir ?</h2>
+          <p class="section-subtitle">
+            <span class="subtitle-line">Chez Ozé, nous accompagnons les indépendants, TPE et PME dans leur lancement, leur développement et leurs événements professionnels.</span>
+            <span class="subtitle-line">Notre approche ? Un savant mélange de stratégie, de créativité et d'audace — pour des projets qui vous ressemblent et qui font la différence.</span>
+            <span class="subtitle-line">Parce qu'oser, c'est déjà commencer à briller.</span>
+          </p>
+        </div>
+        <div class="features-grid">
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="feature-icon">
+                    <i class="fas fa-medal"></i>
                 </div>
-
-                <div class="features-grid">
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="feature-icon">
-                            <i class="fas fa-medal"></i>
-                        </div>
-                        <h3 class="feature-title">Expertise Reconnue</h3>
-                        <p class="feature-description">
-                          10 ans d’expérience au sein de grands groupes, concevant des stratégies ambitieuses à fort impact.
-                        </p>
-                    </div>
-
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="feature-icon">
-                            <i class="fas fa-handshake"></i>
-                        </div>
-                        <h3 class="feature-title">Approche Personnalisée</h3>
-                        <p class="feature-description">
-                            Chaque projet est unique, nous adaptons nos solutions à vos besoins, votre budget et vos ambitions.
-                        </p>
-                    </div>
-
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
-                        <div class="feature-icon">
-                            <i class="fas fa-bullseye"></i>
-                        </div>
-                        <h3 class="feature-title">Orienté résultats, pensé pour vous</h3>
-                        <p class="feature-description">
-                            Chaque action est pensée pour générer un vrai impact : plus de clients, plus de visibilité et une communication qui soutient directement votre développement.
-                        </p>
-                    </div>
-
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
-                        <div class="feature-icon">
-                            <i class="fas fa-calendar-check"></i>
-                        </div>
-                        <h3 class="feature-title">Des événements qui marquent</h3>
-                        <p class="feature-description">
-                            Des portes-ouvertes aux lancements de produits, nous organisons vos événements pour marquer les esprits et attirer vos clients.
-                        </p>
-                    </div>
-
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
-                        <div class="feature-icon">
-                            <i class="fas fa-user-friends"></i>
-                        </div>
-                        <h3 class="feature-title">Un partenaire à vos côtés</h3>
-                        <p class="feature-description">
-                            Bien plus qu'un service : nous vous accompagnons, conseillons et restons disponibles pour faire évoluer vos projets.
-                        </p>
-                    </div>
-
-                    <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
-                        <div class="feature-icon">
-                            <i class="fas fa-project-diagram"></i>
-                        </div>
-                        <h3 class="feature-title">Notre réseau à votre service</h3>
-                        <p class="feature-description">
-                            Profitez de notre réseau de partenaires locaux (photographe, vidéaste, imprimeur, etc.) pour aller plus loin, sans chercher ailleurs.
-                        </p>
-                    </div>
-                </div>
+                <h3 class="feature-title">Expertise Reconnue</h3>
+                <p class="feature-description">
+                  10 ans d’expérience au sein de grands groupes, concevant des stratégies ambitieuses à fort impact.
+                </p>
             </div>
-        </section>
+
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="feature-icon">
+                    <i class="fas fa-handshake"></i>
+                </div>
+                <h3 class="feature-title">Approche Personnalisée</h3>
+                <p class="feature-description">
+                    Chaque projet est unique, nous adaptons nos solutions à vos besoins, votre budget et vos ambitions.
+                </p>
+            </div>
+
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
+                <div class="feature-icon">
+                    <i class="fas fa-bullseye"></i>
+                </div>
+                <h3 class="feature-title">Orienté résultats, pensé pour vous</h3>
+                <p class="feature-description">
+                    Chaque action est pensée pour générer un vrai impact : plus de clients, plus de visibilité et une communication qui soutient directement votre développement.
+                </p>
+            </div>
+
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
+                <div class="feature-icon">
+                    <i class="fas fa-calendar-check"></i>
+                </div>
+                <h3 class="feature-title">Des événements qui marquent</h3>
+                <p class="feature-description">
+                    Des portes-ouvertes aux lancements de produits, nous organisons vos événements pour marquer les esprits et attirer vos clients.
+                </p>
+            </div>
+
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
+                <div class="feature-icon">
+                    <i class="fas fa-user-friends"></i>
+                </div>
+                <h3 class="feature-title">Un partenaire à vos côtés</h3>
+                <p class="feature-description">
+                    Bien plus qu'un service : nous vous accompagnons, conseillons et restons disponibles pour faire évoluer vos projets.
+                </p>
+            </div>
+
+            <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
+                <div class="feature-icon">
+                    <i class="fas fa-project-diagram"></i>
+                </div>
+                <h3 class="feature-title">Notre réseau à votre service</h3>
+                <p class="feature-description">
+                    Profitez de notre réseau de partenaires locaux (photographe, vidéaste, imprimeur, etc.) pour aller plus loin, sans chercher ailleurs.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- CTA Section -->
     <section class="cta-section" id="ctaSection">
