SEO et favicons

--- a/index.html
+++ b/index.html
@@ -3,11 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OZE - Faisons briller votre business</title>
+
+    <!-- ======= Title (optimisé SEO) ======= -->
+    <title>OZE Communication — Agence de communication à Rennes | Faisons briller votre business</title>
+
+    <!-- ======= Primary Meta Tags ======= -->
+    <meta name="description" content="Ozé Communication, agence de communication à Rennes, accompagne les indépendants, TPE et PME : création de site web, identité visuelle, community management et organisation d’événements. Boostez votre visibilité avec nos packs sur-mesure.">
+    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, OZE Communication">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="OZE Communication">
+
+    <!-- ======= Canonical ======= -->
+    <link rel="canonical" href="https://www.oze-communication.fr/">
+
+    <!-- ======= Preconnect / DNS-prefetch for performance ======= -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+    <!-- ======= Open Graph / Social sharing ======= -->
+    <meta property="og:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta property="og:description" content="Création de sites web, identité visuelle, communication & événements pour entrepreneurs, TPE et PME à Rennes. Découvrez nos packs sur-mesure.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.oze-communication.fr/">
+    <meta property="og:image" content="https://www.oze-communication.fr/images/logo5.png">
+    <meta property="og:image:alt" content="OZE Communication - agence de communication à Rennes">
+    <meta property="og:locale" content="fr_FR">
+
+    <!-- ======= Twitter Card ======= -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta name="twitter:description" content="Boostez votre visibilité : création de site web, identité visuelle, community management et événementiel pour TPE/PME à Rennes.">
+    <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
+
+    <!-- ======= Structured Data (Organization + LocalBusiness) JSON-LD ======= -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "@id": "https://www.oze-communication.fr/#organization",
+          "name": "OZE Communication",
+          "url": "https://www.oze-communication.fr",
+          "logo": "https://www.oze-communication.fr/images/logo5.png",
+          <!-- "sameAs": [
+            "https://www.linkedin.com/company/ozecommunication",
+            "https://www.facebook.com/ozecommunication",
+            "https://www.instagram.com/ozecommunication"
+          ], -->
+          "contactPoint": [
+            {
+              "@type": "ContactPoint",
+              "telephone": "+33 6 29 67 49 90",
+              "contactType": "customer service",
+              "areaServed": "FR",
+              "availableLanguage": ["fr","en"]
+            }
+          ]
+        },
+        {
+          "@type": "LocalBusiness",
+          "name": "OZE Communication",
+          "image": "https://www.oze-communication.fr/images/logo5.png",
+          "@id": "https://www.oze-communication.fr/#localbusiness",
+          "url": "https://www.oze-communication.fr",
+          "telephone": "+33 6 29 67 49 90",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "92 Rue de Lorient",
+            "addressLocality": "Rennes",
+            "postalCode": "35000",
+            "addressCountry": "FR"
+          },
+          "priceRange": "€€",
+          "description": "Agence de communication à Rennes spécialisée en création de site web, identité visuelle, community management et organisation d'événements pour entrepreneurs et PME."
+        }
+      ]
+    }
+    </script>
+
+    <!-- ======= Liens CSS et polices ======= -->
     <link rel="stylesheet" href="./stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+    <!-- ======= Favicons (optionnels) ======= -->
+    <!--
+    <link rel="icon" href="https://www.oze-communication.fr/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.oze-communication.fr/apple-touch-icon.png" />
+    -->
+
+    <!-- ======= Theme color for mobile browsers ======= -->
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- ======= Favicons ======= -->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180x180.png">
+    <link rel="manifest" href="site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
+
 <body>
   <!-- Décor subtil de background - À placer juste après <body> -->
 <div class="site-background-decor">
