page mentions legales

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </div>
             </div>
 
-            <!-- Pack Visibilité locale -->
+            <!-- Pack Visibilité -->
             <div class="pack-card featured" data-pack="visibilite">
                 <div class="pack-badge">Populaire</div>
                 <div class="pack-header">
@@ -272,7 +272,7 @@
                     </div>
                     <!-- <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Conseils pour développer votre visibilité locale (presse, partenariats, bouche-à-oreille, digital)</span>
+                        <span>Conseils pour développer votre visibilité (presse, partenariats, bouche-à-oreille, digital)</span>
                     </div> -->
                 </div>
 
@@ -651,7 +651,7 @@
                     </div>
                 </div>
                 <div class="faq-answer">
-                    <p>Oui ! Nous proposons des solutions clé en main pour lancer votre activité sereinement : création de site internet, visibilité locale, réseaux sociaux, et campagnes publicitaires adaptées à votre budget.</p>
+                    <p>Oui ! Nous proposons des solutions clé en main pour lancer votre activité sereinement : création de site internet, visibilité, réseaux sociaux, et campagnes publicitaires adaptées à votre budget.</p>
                 </div>
             </div>
 
@@ -759,7 +759,7 @@
                     <h3 class="footer-title">Nos Services</h3>
                     <ul class="footer-links">
                         <li><a href="#packs">Pack Lancement</a></li>
-                        <li><a href="#packs">Pack Visibilité locale</a></li>
+                        <li><a href="#packs">Pack Visibilité</a></li>
                         <li><a href="#packs">Pack Événementiel</a></li>
                     </ul>
                 </div>
@@ -771,7 +771,7 @@
                         <li><a href="#temoignages">Témoignages</a></li>
                         <li><a href="#blog">Blog</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="#mentions-legales">Mentions légales</a></li>
+                        <li><a href="./mentions_legales.html">Mentions légales</a></li>
                     </ul>
                 </div>
 
@@ -780,15 +780,15 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Avenue des Entrepreneurs<br>75001 Paris, France</span>
+                            <span>92 Rue de Lorient<br>35000 Rennes, France</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+33 1 23 45 67 89</span>
+                            <span>+33 6 29 67 49 90</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contact@entrepreneurboost.fr</span>
+                            <span>contact@oze-communication.fr</span>
                         </div>
                     </div>
                 </div>
